# PokerArena

./: .gitignore  Dockerfile  README.md  start.sh
backend/: README.md  requirements.txt
backend/ai/: agent.py  ai_engine.cpp  difficulty.py  engine_bridge.py
backend/ai/cpp/: CMakeLists.txt
backend/ai/cpp/include/: hand_abstraction.h  hand_abstraction.h.bak  mccfr.h  mccfr.h.bak  subgame_solver.h
backend/ai/cpp/src/: bindings.cpp  hand_abstraction.cpp  mccfr.cpp  mccfr.cpp.bak  subgame_solver.cpp  train_main.cpp
backend/api/: analyze.py  server.py  stats.py  ws.py
backend/game/: deck.py  engine.py  evaluator.py  pot.py  stats.py
backend/logs/hands/: hand_100_20260322_004236.json  hand_104_20260322_004430.json  hand_106_20260322_004512.json  hand_108_20260322_004554.json  hand_10_20260319_011912.json  hand_10_20260321_232906.json  hand_10_20260322_000936.json  hand_110_20260322_004636.json  hand_112_20260322_004718.json  hand_114_20260322_004800.json  hand_118_20260322_004954.json  hand_11_20260319_011915.json  hand_120_20260322_005036.json  hand_122_20260322_005118.json  hand_124_20260322_005200.json  hand_126_20260322_005242.json  hand_128_20260322_005324.json  hand_12_20260322_001018.json  hand_132_20260322_005518.json  hand_136_20260322_005712.json  hand_138_20260322_005754.json  hand_13_20260319_003035.json  hand_13_20260319_011949.json  hand_140_20260322_005836.json  hand_142_20260322_005918.json  hand_146_20260322_010112.json  hand_148_20260322_010154.json  hand_14_20260321_233100.json  hand_14_20260322_001100.json  hand_150_20260322_010236.json  hand_154_20260322_010430.json  hand_156_20260322_010512.json  (+422 more)
backend/tests/: test_ai.py  test_api.py  test_engine.py
doc/: design.md
engine/: CMakeLists.txt
engine/include/: abstraction.h  card.h  cfr.h  game_tree.h  hand_eval.h  strategy.h  subgame.h
engine/src/: abstraction.cpp  card.cpp  cfr.cpp  decide_main.cpp  game_tree.cpp  hand_eval.cpp  strategy.cpp  subgame.cpp  train_main.cpp
engine/tests/: test_main.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
(+12 files in other folders)
